[package]
name = "lsd-limine"
version = "0.1.0"
edition = "2021"

[dependencies]
limine = "0.1.9"
spin = "0.9"
x86_64 = "0.14.10"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"

[dependencies.font8x8]
version = "0.3.1"
default-features = false
features = ["unicode"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]